[package]
name = "poly-ob-bench"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.38", features = ["rt-multi-thread", "macros", "time"] }
tokio-tungstenite = { version = "0.23", features = ["rustls-tls-native-roots"] }
futures-util = "0.3"
anyhow = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.3"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
redis = { version = "0.25", features = ["tokio-comp", "aio"] }
chrono = { version = "0.4", features = ["clock"] }
url = "2"


