[package]
name = "poly-ob-common"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.38", features = ["rt-multi-thread", "macros", "time"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "gzip", "brotli", "deflate"] }
redis = { version = "0.25", features = ["tokio-comp", "aio"] }
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
config = { version = "0.14", default-features = false, features = ["toml"] }
toml = "0.8"
once_cell = "1.19"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["clock"] }
base64 = "0.22"


