[package]
name = "poly-ob-fetcher"
version = "0.1.0"
edition = "2021"

[dependencies]
poly-ob-common = { path = "../common" }
tokio = { version = "1.38", features = ["rt-multi-thread", "macros", "time", "net", "io-util"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["clock"] }


