[package]
name = "poly-ob-printer"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.38", features = ["rt-multi-thread", "macros"] }
redis = { version = "0.25", features = ["tokio-comp", "aio"] }
anyhow = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
chrono = { version = "0.4", features = ["clock"] }
futures-util = "0.3"


